// Vitest Snapshot v1

exports[`InputNumber > :props > :defaultValue, default value 6 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :disabled, function can not be call 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :format, with 6% 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :max, value 6 < max 10 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :max, value 16 > max 10 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :min, value -1 < min 1 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :min, value 6 > min 1 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :mode, without class t-is-controls-right 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :mode:column, with class t-is-controls-right 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :mode:row, without class t-is-controls-right 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :size:large, with class t-size-l 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :size:medium, with class t-size-m 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :size:small, with class t-size-s 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :step, 2 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :value, 6 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > :value, 6.55 1`] = `
VueWrapper {
  "_emitted": {
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;

exports[`InputNumber > :props > class, with class t-input-number 1`] = `
VueWrapper {
  "_emitted": {
    "hook:beforeMount": [
      [],
    ],
    "hook:created": [
      [],
    ],
    "hook:mounted": [
      [],
    ],
  },
  "_emittedByOrder": [
    {
      "args": [],
      "name": "hook:created",
    },
    {
      "args": [],
      "name": "hook:beforeMount",
    },
    {
      "args": [],
      "name": "hook:mounted",
    },
  ],
  "isFunctionalComponent": undefined,
}
`;
